src/go/gateway-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service-deployment
  labels:
    keel.sh/trigger: poll
    keel.sh/match-tag: "true"
    keel.sh/policy: "force"
  annotations:
    keel.sh/pollSchedule: "@every 1m"
spec:
  replicas: 4
  selector:
    matchLabels:
      app: gateway-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
      - name: site
        image: ryss/gateway-service:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 3500
