src/go/gateway-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service-service
spec:
  ports:
   - name: tcp
     port: 80
     protocol: TCP
     targetPort: 3500
  selector:
    app: gateway-service
  type: LoadBalancer
  loadBalancerIP: 192.168.1.10
