src/go/gateway-service/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gateway-service-ingress

spec:
  routes:
  - match: Host(`api.ryss.app`)
    kind: Rule
    services:
    - name: gateway-service-service
      port: 80
